# code-review-cli

./: .gitignore  .reviewrc  LICENSE  README.md  pyproject.toml  review_report.html
src/: cli.py
src/analyzer/: base.py  big_o.py  bug.py  complexity.py  dead_code.py  engine.py  issue.py  security.py  style.py
src/reporters/: console.py  html_reporter.py  json_reporter.py
src/utils/: config.py  file_walker.py  git.py
tests/: test_style.py
